<resources>
    <string name="app_name">一元夺宝</string>

    <string name="tab_home">夺宝</string>
    <string name="tab_win">最新揭晓</string>
    <string name="tab_find">发现</string>
    <string name="tab_cart">清单</string>
    <string name="tab_user">我的</string>

    <string name="index_kind">分类</string>
    <string name="index_ten">10元专区</string>
    <string name="index_share">晒单</string>
    <string name="index_qa">常见问题</string>

    <string name="buy_now">立即购买</string>
    <string name="add_cart">加入清单</string>
    <string name="much_degree">揭晓进度</string>

    <string name="goods_detail">图片详情</string>
    <string name="back">返回</string>

    <string name="user_hint">邮箱账号</string>
    <string name="pwd_hint">密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login">登录</string>

    <string name="go_duobao">马上去夺宝</string>

</resources>
